# airust

./: Cargo.toml  README.md  build.rs  test.sh
knowledge/: dynamic_test.json  train.json
src/: agent.rs  context_agent.rs  dynamic_knowledge.rs  fuzzy_agent.rs  knowledge.rs  lib.rs  match_agent.rs  pdf_loader.rs  simple_agent.rs  structured_agent.rs  tfidf_agent.rs
