[package]
name = "airust"
version = "0.1.4"
authors = ["LEVOGNE"]
edition = "2021"
description = "Trainable, modular AI engine in Rust with compile-time knowledge"
license = "MIT"
readme = "README.md"
keywords = ["ai", "machine-learning", "knowledge", "compile-time"]
categories = ["science", "development-tools::testing"]
documentation = "https://docs.rs/airust"
homepage = "https://github.com/LEVOGNE/airust"
repository = "https://github.com/LEVOGNE/airust"
 
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
strsim = "0.10"
indexmap = "1.9.1" 

[build-dependencies]
serde_json = "1.0"

[[bin]]
name = "airust"
path = "src/bin/airust.rs"
