[package]
name = "airust"
version = "0.1.5"
authors = ["LEVOGNE"]
edition = "2021"
description = "Trainable, modular AI engine in Rust with compile-time knowledge"
license = "MIT"
readme = "README.md"
keywords = ["ai", "machine-learning", "knowledge", "compile-time"]
categories = ["science", "development-tools::testing"]
documentation = "https://docs.rs/airust"
homepage = "https://github.com/LEVOGNE/airust"
repository = "https://github.com/LEVOGNE/airust"
 
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
strsim = "0.10"
indexmap = "1.9.1" 
colored = { version = "2.0", optional = true }
chrono = "0.4"
thiserror = "1.0"
unicode-normalization = "0.1"
regex = "1.5"
plotly = { version = "0.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
plotters = { version = "0.3", optional = true }

[features]
default = ["colors"]
colors = ["dep:colored"]
plotting = ["dep:plotly", "dep:plotters"]
async = ["dep:tokio"]

[build-dependencies]
serde_json = "1.0"

[[bin]]
name = "airust"
path = "src/bin/airust.rs"